[project]
name = "advent-of-code"
version = "0.1.0"
description = "My Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[tool.uv]
dev-dependencies = [
    "basedmypy>=2.10.0",
    "pytest>=8.3.3",
    "pytest-freezer>=0.4.8",
    "ruff>=0.8.1",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    # Docstrings
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D107", # undocumented-public-init
    "D200", # fits-on-one-line
    "D205", # blank-line-after-summary
    "D212", # multi-line-summary-first-line
    "D105", # undocumented-magic-method

    # Code design
    "PLR0913", # too-many-arguments
    "EM102",   # f-string-in-exception
    "TRY003",  # raise-vanilla-args
    "EM101",   # raw-string-in-exception
    "BLE001",  # blind-except
    "ERA001",  # commented-out-code
    "A001",    # builtin-variable-shadowing
    "A002",    # builtin-argument-shadowing
    "A003",    # builtin-attribute-shadowing
    "T201",    # print
    "S603",    # subprocess-without-shell-equals-true

    # Meta
    "FIX002", # line-contains-todo
    "TD003",  # missing-todo-link
    "E741",   # ambiguous-variable-name

    # Formatter conflicts
    "ISC001", # single-line-implicit-string-concatenation
    "COM812", # missing-trailing-comma

    # AoC Specific
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument
    "C901",    # complex-structure
    "PLR2004", # magic-value-comparison
]


[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = [
    "S101",   # assert
    "D103",   # undocumented-public-function
    "FBT001", # boolean-type-hint-positional-argument
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
show_error_codes = true
pretty = true
strict = true
